syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message NumberRangeMessage {
    int32 start = 1;
    int32 end = 2;
}

message NumberMessage {
    int32 number = 1;
}

service RemoteNumberService {
    rpc getNumbers(NumberRangeMessage) returns (stream NumberMessage);
}
